Removes the clear cross in IE 10+, stops backspace from deleting url in input, aligned jsdoc comments

--- a/src/scss/share.scss
+++ b/src/scss/share.scss
@@ -63,6 +63,11 @@
 			font-size: 12px;
 			line-height: 14px;
 			box-shadow: 0 0 3px #333333;
+
+			// Removes the cross the clears the input in IE 10+
+			&::-ms-clear {
+				display: none;
+			}
 		}
 	}
 
